--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.13.2",
     "dotenv": "^16.6.1",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "xml2js": "^0.6.2"
   }
 }
